--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@types/gl-matrix": "^3.2.0",
     "@types/node": "^22.1.0",
     "@types/pngjs": "^6.0.0",
-    "awesome-typescript-loader": "^5.2.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "chai": "5.1.1",
     "cross-env": "^7.0.3",
     "mocha": "^10.6.0",
     "pngjs": "^7.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
     "webpack": "^5.1.1",
     "webpack-cli": "^5.1.4",
